<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/common_navigation_back_bar"
        android:id="@+id/include"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/reciver_name"/>
            <EditText
                android:layout_marginLeft="16dp"
                android:id="@+id/reciver_name"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/name_hint"/>
        </LinearLayout>
        <LinearLayout
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/reciver_adress"/>
        <EditText
            android:id="@+id/reciver_adress"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/adress_hint"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="手机号:"/>
            <EditText
                android:id="@+id/reciver_phone"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/phone_hint"/>
        </LinearLayout>
        <Button
            android:id="@+id/keep_adress"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:text="@string/sure"
            android:textColor="@color/colorWhite"
            android:background="@color/colorMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>
