<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorGround"
              android:orientation="horizontal"
              android:id="@+id/navigation_bar">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/text_show_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_2_selected"
            />

        <TextView
            android:id="@+id/text_show_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorText"
            android:text="@string/text_show"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageButton
            android:id="@+id/diy_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_3_normal"
            />
        <TextView
            android:id="@+id/diy_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorText"
            android:text="@string/diy"/>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageButton
            android:id="@+id/creative_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_4_normal"
            />
        <TextView
            android:id="@+id/creative_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorText"
            android:text="@string/creative_tao"/>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <ImageButton
            android:id="@+id/myinfo_button"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_1_normal"
            />
        <TextView
            android:id="@+id/myinfo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/colorText"
            android:text="@string/my_info"/>

    </LinearLayout>


</LinearLayout>
