<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >
    <include layout="@layout/common_navigation_back_bar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:text="@string/acount"
                android:textColor="#000000"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="phone"
                android:hint="@string/uer_id_hint"
                android:textColorHint="#66000000"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:id="@+id/denlu_phone"
                android:layout_marginRight="16dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textSize="16sp"
                android:text="@string/securate"
                android:textColor="#000000"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:hint="@string/uer_pass_hint"
                android:textColorHint="#66000000"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:id="@+id/denlu_mima"
                android:layout_marginRight="16dp"
                />
        </LinearLayout>

        <Button
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:layout_marginTop="100dp"
            android:text="登陆"
            android:textSize="16sp"
            android:id="@+id/submit"
            android:textColor="@color/colorWhite"
            android:background="@color/colorMain"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        >
        <TextView
            android:layout_marginLeft="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="忘记密码"
            android:textSize="16sp"
            android:id="@+id/forget"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注册->"
            android:layout_marginRight="16dp"
            android:textSize="16sp"
            android:id="@+id/register"
            />
    </LinearLayout>
</RelativeLayout>
