<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGround"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#80323232"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/test_01"/>
        <Button
            android:id="@+id/please_submit"
            android:layout_marginTop="110dp"
           android:layout_centerHorizontal="true"
            android:background="@drawable/login_register_btn"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlackGround"
            android:text="@string/login"/>
        <com.jy.android.travel.roundImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_comment_upload_from_camera"
            android:id="@+id/denglu_scccess_head_image"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index"
            android:id="@+id/denglu_scccess_nichen_text"
            android:textSize="16sp"
            android:layout_below="@+id/denglu_scccess_head_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:visibility="gone"
            />
    </RelativeLayout>

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>-->

    <LinearLayout
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:id="@+id/about_me_click"
        >
        <TextView
            android:gravity="center_vertical"
            android:id="@+id/about_me_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/about_me"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            />

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/right_arrow_32"
            android:padding="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            android:id="@+id/imageView"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="16dp"/>
    <LinearLayout
        android:background="@color/colorWhite"
        android:id="@+id/zhao_shan_click"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        >

        <TextView
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/zhaoshanjiaming"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="4dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right_arrow_32"
            android:layout_marginTop="4dp"
            android:layout_marginRight="8dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        ></View>


    <LinearLayout
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:id="@+id/selef_infor_click"
        >

        <TextView
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/selfinfo"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:id="@+id/textView"/>

        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/right_arrow_32"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:layout_marginRight="8dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="16dp"
        ></View>
    <LinearLayout
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:id="@+id/diy_jilu_click"
        >
        <TextView
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/diyjilu"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            />
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right_arrow_32"
            android:layout_marginTop="4dp"
            android:padding="4dp"
            android:layout_marginRight="8dp"
            />

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="退出"
        android:visibility="gone"
        android:textColor="@color/colorBlackGround"
        android:layout_margin="8dp"
        android:background="@drawable/login_exit_btn"
        android:id="@+id/exit_du"
        />
</LinearLayout>
