<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">
    <include layout="@layout/common_navigation_back_bar"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:id="@+id/self_info_span1"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/header_image_ll"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:text="@string/headtext"
            android:gravity="center_vertical"
            />
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="10dp"
            android:id="@+id/self_select_head_image"
            android:src="@drawable/ic_comment_upload_from_camera"
            />
        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/right_arrow_32"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/self_info_short_span1"
        ></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/self_info_nich_ll"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:text="@string/nichen"
            android:gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textSize="15sp"
            android:text="@string/index"
            android:id="@+id/self_info_nich_text"
            />
        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/right_arrow_32"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:id="@+id/self_info_span2"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/self_info_sex_ll"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:text="@string/sex"
            android:gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selfinfo_sex_text"
            android:layout_marginRight="10dp"
            android:textSize="15sp"
            android:text="男"
            />

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/right_arrow_32"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/self_info_span3"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/self_info_getaddress_ll"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"
            android:text="@string/getaddress"
            android:gravity="center_vertical"
            />
        <TextView
            android:layout_weight="1"
            android:id="@+id/adress_receive"
            android:layout_marginLeft="8dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/right_arrow_32"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            />
    </LinearLayout>
</LinearLayout>
